[package]
name = 'reward-pool'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clover-traits = { workspace = true }
clover-primitives = { workspace = true }

serde = { workspace = true, optional = true }
byteorder = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
num-traits = { workspace = true }
num-derive= { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
pallet-balances = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ['std']
std = [
  'byteorder/std',
  'clover-traits/std',
  'frame-support/std',
  'frame-system/std',
  'num-traits/std',
  'parity-scale-codec/std',
  'scale-info/std',
  'pallet-balances/std',
  'clover-primitives/std',
  'serde',
  'sp-runtime/std',
  'sp-std/std',
]
