[package]
name = "clover-rpc-runtime-api"
authors = ['Clover Network <https://github.com/clover-network>']
edition = "2018"
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clover-primitives = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

[features]
default = [ "std" ]
std = [ "parity-scale-codec/std", "sp-api/std" ]
